--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container mt-5">
+  <div class="jumbotron" style="text-align:center">
+    <h1>Tic Tac Go</h1>
+    <p>Welcome!</p>
+
+    <% if current_user %>
+      <%= link_to "Play a Game!", game_path %>
+      <br>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Create an Account", new_user_registration_path %>
+      <br>
+      <%= link_to "Login", new_user_session_path %>
+    <% end %>
+  </div>
+</div>
